src/objects/zqu__Quote__c.object
<CustomObject>
    <description>The Quotes related to an Opportunity.</description>
    <fields>
        <fullName>Approval_Process_Flag_Discount_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-1336. This flag is set when the ZuoraQuoteSelectProductDetailsController.navigateNext() is clicked (&quot;Edit Line Items&quot; page). In short, if any of the product discounts were manually changed to a higher percentage than what Steelbrick autocalculated, when the Quote is submitted for approval the sales rep&apos;s RSD will need to approve this Opportunity / children Quote records.</description>
        <label>Approval Process Flag - Discount Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <label>AutoRenewal</label>
        <picklist>
            <picklistValues>
                <fullName>NO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillToContactQuoteTemplateMergeField__c</fullName>
        <description>SF-2177. Used to populate information for the Quote template in Zuora. If the Quote is for a new Billing Account this field is populated with information from the Quote&apos;s Bill To Contact lookup, and if the Quote is for an existing Billing Account this field is populated with information from the Billing Account record in Salesforce.</description>
        <label>BillToContactQuoteTemplateMergeField</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Reenter_Original_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Reenter Original Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Quotes (Cancel Reenter Original Subscription)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Announcements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor(ette) Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Salons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Shows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Baby Gear, Toys &amp; Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Baby Products &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Birthing Centers &amp; Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Breastfeeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Child Care &amp; Nanny Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Cord Blood Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Doulas &amp; Midwives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Family &amp; Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Fertility Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Health &amp; Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Nursery Furniture &amp; Décor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Pediatric Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Photographers &amp; Videographers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Play &amp; Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Prenatal Products &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump NEW - Preschools &amp; Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calligraphers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceremony Musicians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance Lessons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc Jockeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Jewelry and Accessories</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Delta_MRR__c</fullName>
        <formula>IF( 
zqu__Previewed_Delta_MRR__c&lt;&gt;0, 
zqu__Previewed_Delta_MRR__c, 
zqu__Previewed_MRR__c - Original_Subscription_CMRR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compare_TCV_and_True_TCV__c</fullName>
        <formula>zqu__TCV__c = True_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare TCV and True TCV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Quote_Charge_Detail__c</fullName>
        <label>Count of Quote Charge Detail</label>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Remove_Amendment__c</fullName>
        <label>Count of Remove Amendment</label>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Default_Values_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-2132. To remember the choice that we made during the create quote screen</description>
        <label>Default Values Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountQualifier__c</fullName>
        <label>Discount Qualifier</label>
        <picklist>
            <picklistValues>
                <fullName>Wedding Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exist_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exist Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCancellable__c</fullName>
        <formula>TODAY() &gt;= IF((MONTH(zqu__StartDate__c)=2&amp;&amp;DAY(zqu__StartDate__c)=29), DATE( YEAR( zqu__StartDate__c ) + 1, MONTH( zqu__StartDate__c ) - 1, DAY( zqu__StartDate__c ) ),  DATE( YEAR( zqu__StartDate__c ) + 1, MONTH( zqu__StartDate__c ), DAY( zqu__StartDate__c ) ) )</formula>
        <label>Is Cancellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AK - Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Houston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - New York Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Philadelphia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - South Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bump - Wash DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento/Tahoe/Reno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Promo_Code_Discount__c</fullName>
        <label>Maximum Promo Code Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfExcessEmails__c</fullName>
        <label>NumberOfExcessEmails</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>zqu__QuoteCharge__c.zqu__ProductRatePlanName__c</field>
            <operation>contains</operation>
            <value>Email</value>
        </summaryFilterItems>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfQuoteAmendmentRecords__c</fullName>
        <description>Count of the number of Quote Amendment records associated to a Quote. Used in the SubscriptionCreatorQueuedJob class for SF-602.</description>
        <label>NumberOfQuoteAmendmentRecords</label>
        <summaryForeignKey>zqu__QuoteAmendment__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofEmailCampaigns__c</fullName>
        <label>Number of Email Campaigns</label>
        <summaryFilterItems>
            <field>zqu__QuoteCharge__c.zqu__ProductRatePlanName__c</field>
            <operation>contains</operation>
            <value>LDE</value>
        </summaryFilterItems>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type__c</fullName>
        <label>Old Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Update__c</fullName>
        <label>Opportunity Stage Update</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type1__c</fullName>
        <label>Order Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>First Internet Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Print Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal(Original)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal(New)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Renter(Original)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Renter(New)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Type2__c</fullName>
        <label>Order Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delta Zero</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OriginalSalesforceQuoteID__c</fullName>
        <description>SF-602</description>
        <label>OriginalSalesforceQuoteID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalSubCreatorSalesRepId__c</fullName>
        <label>OriginalSubCreatorSalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Subscription_CMRR__c</fullName>
        <label>Original Subscription CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Expiration_Date__c</fullName>
        <description>CSP-1281: This field is used to store the expiration date of the payment method.</description>
        <label>Payment Method Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>This field is used to Copy the payment method that is selected during the quote process and will sync down to subscription in zuora</description>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment_Schedule__c</fullName>
        <label>Preferred Payment Schedule</label>
        <picklist>
            <controllingField>Product_Line__c</controllingField>
            <picklistValues>
                <fullName>Month</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_TCV__c</fullName>
        <description>CSP-459 | During the creation of an Amendment Quote, the previous version of the Subscription is queried and it&apos;s TCV value is recorded here</description>
        <label>Previous Subscription TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>SF-1428. Used to filter what products are shown in the Quote creation workflow process.</description>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotional_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <label>Promotional Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Template_TCV__c</fullName>
        <description>CSP-459 | Formula field used to calculate the TCV to be displayed on the Quote Template</description>
        <formula>IF(ISPICKVAL(zqu__SubscriptionType__c, &apos;New Subscription&apos;),
   zqu__Previewed_TCV__c,
   IF(ISPICKVAL(zqu__SubscriptionType__c, &apos;Amend Subscription&apos;),
      Previous_Subscription_TCV__c + zqu__Previewed_Delta_TCV__c,
      IF(ISPICKVAL(zqu__SubscriptionType__c, &apos;Renew Subscription&apos;),
         zqu__Previewed_Delta_TCV__c,
         0.00
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Template TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSDLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSD_Id__c</fullName>
        <label>RSD Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Quote_Failed_to_Send_to_Z_Billing__c</fullName>
        <label>Reason Quote Failed to Send to Z-Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalRepId__c</fullName>
        <label>RenewalRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalRepLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportingRepId__c</fullName>
        <label>ReportingRepId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Reporting_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesRepId__c</fullName>
        <label>SalesRepId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_100</formula>
        <label>Server URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <formula>$Api.Session_ID</formula>
        <label>Session Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToContactQuoteTemplateMergeField__c</fullName>
        <description>SF-2177. Used to populate information for the Quote template in Zuora. If the Quote is for a new Billing Account this field is populated with information from the Quote&apos;s Sold To Contact lookup, and if the Quote is for an existing Billing Account this field is populated with information from the Billing Account record in Salesforce.</description>
        <label>SoldToContactQuoteTemplateMergeField</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Being_Renewed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Being Renewed</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Quotes (Renewal Dashboard Subscription)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Term_Start_Date__c</fullName>
        <formula>IF(ISBLANK(zqu__SubscriptionTermStartDate__c),zqu__TermStartDate__c, zqu__SubscriptionTermStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Total__c</fullName>
        <description>This field is used to aggregate the effective price from all Quote Rate Plan Charge child records to show the per term total of the quote.</description>
        <label>Term Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Discount__c</fullName>
        <inlineHelpText>Sum of the discounts (in dollars) from the quote rate plan charges.  This is essentially the TCV of discounts.</inlineHelpText>
        <label>Total Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>True_TCV_JSON_Response_Overwritten__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true when the True TCV JSON has been replaced. CSP-2542</description>
        <label>True TCV JSON Response Overwritten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>True_TCV_JSON_Response__c</fullName>
        <description>(CSP-1181) store the JSON response returned while retrieving the Quote&apos;s true TCV amount</description>
        <label>True TCV JSON Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>True_TCV__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>(CSP-1181) Used to replace Zuora&apos;s out-of-the-box TCV functionality since it doesn&apos;t work properly in all cases</description>
        <label>True TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account associated with this Quote.</description>
        <inlineHelpText>The Account associated with this Quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__AmendmentName__c</fullName>
        <description>A name for the amendment.</description>
        <label>Amendment Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Amendment_Name__c</fullName>
        <description>New amendment name field to accommodate Opportunity Name</description>
        <label>Amendment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ApplyCreditBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag determines whether any credit balance on a customer&apos;s account is automatically applied to invoices</description>
        <inlineHelpText>The flag determines whether any credit balance on a customer&apos;s account is automatically applied to invoices</inlineHelpText>
        <label>Apply Credit Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ApprovalStatus__c</fullName>
        <description>Current Approval Status of the Quote</description>
        <inlineHelpText>Used to track the approval status of the quote.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Quote will Auto Renew or not.</description>
        <inlineHelpText>If this Quote will Auto Renew or not.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <label>Bill Cycle Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is billed for this Quote.</description>
        <inlineHelpText>The Contact that is billed for this Quote.</inlineHelpText>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__BillingBatch__c</fullName>
        <label>Billing Batch</label>
        <picklist>
            <picklistValues>
                <fullName>Batch1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Batch2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>